--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 					</p>
 
 					<hr />
-					<div class="checkbox">
+					<!--<div class="checkbox">
 						<label>
 							<input type="checkbox" v-model='isDebug'> 调试模式
 						</label>
-					</div>
+					</div>-->
 					<h2>
 						<span class="label label-success">对：{{trues}}</span>
 						<span class="label label-danger">错：{{falses}}</span>
